--- a/BookStoreApplication/src/app/app.component.html
+++ b/BookStoreApplication/src/app/app.component.html
@@ -1,6 +1,17 @@
+<div class="container-fluid bg-dark">
+    <header class="d-flex justify-content-center py-3">
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+      </ul>
+    </header>
+  </div>
 <div>
     <a routerLink="/about-us">ABOUT</a>
-    <a routerLink="/auth/login">LOGIN</a>
+    <a routerLink="/auth/login"[queryParams]="{name:'utkarsh' ,email:email}">LOGIN</a>
     <a routerLink="/auth/signup">SIGNUP</a>
     <a routerLink="/public/all-books">ALL_BOOKS</a>
     <a routerLink="/public/book-details/12">BOOKDETAILS</a>
