--- a/BookStoreApplication/src/app/shared/component/not-found/not-found.component.html
+++ b/BookStoreApplication/src/app/shared/component/not-found/not-found.component.html
@@ -1,2 +1,9 @@
 <p>The page you are looking for does not exist</p>
-<div>click <a routerLink="/about-us">ABOUT</a> e to go home page</div>
+<div>click <a routerLink="/about-us" href="">ABOUT</a> e to go home page</div>
+Reactive form
+form control,group,form array
+,template driver form,app calling,http client module,pure,impure,directive types,
+communication between compnents
+-parent to child
+-sibling component 
+
