--- a/BookStoreApplication/src/app/Book/component/all-books/all-books.component.html
+++ b/BookStoreApplication/src/app/Book/component/all-books/all-books.component.html
@@ -1,19 +1,26 @@
+<p >counter={{(counter.counter)}}</p>
+<button (click)="incCount()">counter++</button>
+<button (click)="decCount()">counter--</button>
+<div class="container">
+  
 <mat-card class="example-card" *ngFor="let book of books ">
+   
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{book.title}}</mat-card-title>
      
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <img mat-card-image src="https://m.media-amazon.com/images/I/51X-pD3qaKL._SY445_SX342_QL70_ML2_.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
       <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
+        Author:{{book.author}}
       </p>
+      <p>TotalPages:{{book.totalPages}}</p>
+      <p>Price:{{book.price.value+' '+book.price.currency}}</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
+      <button mat-button>Detail</button>
       <button mat-button>SHARE</button>
     </mat-card-actions>
   </mat-card>
+</div>
