--- a/BookStoreApplication/src/app/Book/component/recent-books/recent-books.component.css
+++ b/BookStoreApplication/src/app/Book/component/recent-books/recent-books.component.css
@@ -3,6 +3,21 @@
     margin: 5px;
   }
   
+.example-header-image {
+    background-image: url('https://m.media-amazon.com/images/I/51X-pD3qaKL._SY445_SX342_QL70_ML2_.jpg');
+    background-size: cover;
+}
+.container{
+    padding: 10px;
+    display: flex;
+    margin-left: 2px;
+    flex-wrap: wrap ;
+    justify-content: center;
+}.example-card {
+    max-width: 300px;
+    margin: 5px;
+  }
+  
   .example-header-image {
     background-image: url('https://m.media-amazon.com/images/I/51X-pD3qaKL._SY445_SX342_QL70_ML2_.jpg');
     background-size: cover;
