--- a/BookStoreApplication/src/app/app.component.html
+++ b/BookStoreApplication/src/app/app.component.html
@@ -9,8 +9,9 @@
     <a routerLink="/about-us">ABOUT</a>
     <a routerLink="/auth/login"[queryParams]="{name:'utkarsh' ,email:email}">LOGIN</a>
     <a routerLink="/auth/signup">SIGNUP</a>
-    <a routerLink="/Book/yup">ALL_BOOKS</a>
-    <a routerLink="/Book/book-details/12">BOOKDETAILS</a>
+    <a routerLink="/book/yup">ALL_BOOKS</a>
+    <a routerLink="/book/book-details/12">BOOKDETAILS</a>
+    <a routerLink="/book/add-book">ADDBOOK</a>
 </div>
  <router-outlet></router-outlet> 
  <app-footer></app-footer>
