--- a/BookStoreApplication/src/app/shared/component/author/author.component.html
+++ b/BookStoreApplication/src/app/shared/component/author/author.component.html
@@ -1,4 +1,5 @@
 <p>author works!</p>
 
 <p *ngIf="showAuthor">Data is coming from parent={{data}}</p>
- 
+<p >Data is coming from parent1={{dat}}</p>
+<button (click)="btnclick()">Pass Data To Parent</button>
