--- a/BookStoreApplication/src/app/shared/component/toolbar/toolbar.component.html
+++ b/BookStoreApplication/src/app/shared/component/toolbar/toolbar.component.html
@@ -9,7 +9,7 @@
         <mat-icon>home</mat-icon>
        
         </button>
-        <button mat-button routerLink="/home">All-Books</button>
+        <button mat-raised-button color="primary" routerLink="/book/yup">All-Books</button>
         <span class="spacer"></span>
       <button type="button" mat-button routerLink='/auth/login' href="" >Login</button>
       <button mat-button routerLink="/auth/signup">Signup</button>
@@ -23,4 +23,5 @@
     </mat-toolbar>
 
   </p>
+<a routerLink="book/yup" href="">ALL_BOOKS</a>
 
