--- a/BookStoreApplication/src/app/Book/component/recent-books/recent-books.component.html
+++ b/BookStoreApplication/src/app/Book/component/recent-books/recent-books.component.html
@@ -1,24 +1,1 @@
-
-<div class="container">
- 
-    <mat-card class="example-card" *ngFor="let book of recentbooks ">
-        <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>{{book.title}}</mat-card-title>
-         
-        </mat-card-header>
-        <img mat-card-image src="https://m.media-amazon.com/images/I/51X-pD3qaKL._SY445_SX342_QL70_ML2_.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            Author:{{book.author}}
-          </p>
-          <p>TotalPages:{{book.totalPages}}</p>
-          <p>Price:{{book.price.value+' '+book.price.currency}}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>Detail</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    
+<app-book-card [allbooks]="recentbooks"></app-book-card>  <!--using alias name-->
