--- a/BookStoreApplication/src/app/app.component.html
+++ b/BookStoreApplication/src/app/app.component.html
@@ -4,14 +4,16 @@
   </mat-toolbar>
 </p> -->
 <app-toolbar></app-toolbar>
+
 <div>
   <a routerLink="/home">Home</a>
     <a routerLink="/about-us">ABOUT</a>
     <a routerLink="/auth/login"[queryParams]="{name:'utkarsh' ,email:email}">LOGIN</a>
     <a routerLink="/auth/signup">SIGNUP</a>
-    <a routerLink="/book/yup">ALL_BOOKS</a>
+    <a routerLink="/book">ALL_BOOKS</a>
     <a routerLink="/book/book-details/12">BOOKDETAILS</a>
     <a routerLink="/book/add-book">ADDBOOK</a>
 </div>
+<br>
  <router-outlet></router-outlet> 
  <app-footer></app-footer>
