--- a/BookStoreApplication/src/app/shared/component/toolbar/toolbar.component.html
+++ b/BookStoreApplication/src/app/shared/component/toolbar/toolbar.component.html
@@ -7,9 +7,8 @@
       <span class="spacer"></span>
       <button mat-icon-button routerLink="home" >
         <mat-icon>home</mat-icon>
-       
         </button>
-        <button mat-raised-button color="primary" routerLink="/book/yup">All-Books</button>
+        <button mat-raised-button color="primary" routerLink="/book">All-Books</button>
         <span class="spacer"></span>
       <button type="button" mat-button routerLink='/auth/login' href="" >Login</button>
       <button mat-button routerLink="/auth/signup">Signup</button>
@@ -23,5 +22,6 @@
     </mat-toolbar>
 
   </p>
-<a routerLink="book/yup" href="">ALL_BOOKS</a>
+  
+
 
