--- a/BookStoreApplication/src/app/Book/component/book-card/book-card.component.css
+++ b/BookStoreApplication/src/app/Book/component/book-card/book-card.component.css
@@ -14,3 +14,8 @@
     flex-wrap: wrap ;
     justify-content: center;
 }
+.example-form-field {
+  width: 200px;
+  height: 70px;
+margin-left:60%;
+}
