--- a/BookStoreApplication/src/app/Book/component/book-card/book-card.component.html
+++ b/BookStoreApplication/src/app/Book/component/book-card/book-card.component.html
@@ -1,7 +1,14 @@
+<mat-form-field class="example-form-field">
+  <mat-label>Search Filter</mat-label>
+  <input class="left" matInput type="text" [(ngModel)]="value">
+  <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+    <mat-icon>close</mat-icon>
+  </button>
+</mat-form-field>
 <div class="container">
-  
-    <mat-card class="example-card" *ngFor="let book of books ">
-       
+ 
+    <mat-card class="example-card" *ngFor="let book of books|filter:value">
+      
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
           <mat-card-title>{{book.title}}</mat-card-title>
@@ -13,10 +20,11 @@
             Author:{{book.author}}
           </p>
           <p>TotalPages:{{book.totalPages}}</p>
-          <p>Price:{{book.price.value+' '+book.price.currency}}</p>
+          <p>Price:{{book.price.currency+' '+book.price.value}}</p>
+          <p>BookPublished:{{book.ispublished}}</p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button>Detail</button>
+          <button mat-button color="primary" routerLink="/book/book-details/{{book.id}}">Edit</button>
           <button mat-button>SHARE</button>
         </mat-card-actions>
       </mat-card>
